<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:title="@string/start_grade_title"
        android:key="start_grade"
        android:summary="@string/start_grade_summary"
        android:numeric="decimal"
        android:defaultValue="@string/start_grade_default"
        />
    <EditTextPreference android:title="@string/min_gain_title"
        android:key="min_gain"
        android:summary="@string/min_gain_summary"
        android:numeric="integer"
        android:defaultValue="@string/min_gain_default"
        />
    <EditTextPreference android:title="@string/min_grade_title"
        android:key="min_grade"
        android:summary="@string/min_grade_summary"
        android:numeric="decimal"
        android:defaultValue="@string/min_grade_default"
        />
    <EditTextPreference android:title="@string/min_length_title"
        android:key="min_length"
        android:summary="@string/min_len_summary"
        android:numeric="integer"
        android:defaultValue="@string/min_length_default"
        />
    <Preference android:title="@string/reset_title"
        android:key="@string/reset"
        android:summary="@string/reset_summary">
    </Preference>
</PreferenceScreen>